concord-server: skip pull_request process start when useEventCommitId and event is from different repo (#959)