@@ -77,7 +77,7 @@ public class Payload {
         String repo = null;
 
         if (REPOSITORY_EVENTS.contains(eventName)) {
-            Map<String, Object> m = MapUtils.getMap(data, REPO_NAME_KEY, Collections.emptyMap());
+            Map<String, Object> m = MapUtils.getMap(data, REPO_NAME_KEY, Map.of());
             fullRepoName = MapUtils.getString(m, "full_name");
 
             if (fullRepoName != null) {
@@ -90,7 +90,7 @@ public class Payload {
                 repo = as[1];
             }
         } else if (ORGANIZATION_EVENTS.contains(eventName)) {
-            Map<String, Object> m = MapUtils.getMap(data, ORGANIZATION_KEY, Collections.emptyMap());
+            Map<String, Object> m = MapUtils.getMap(data, ORGANIZATION_KEY, Map.of());
             org = MapUtils.getString(m, "login");
         } else {
             return null;
@@ -115,8 +115,8 @@ public class Payload {
 
     public String getHost() {
         try {
-            Map<String, Object> repo = MapUtils.getMap(data, REPO_NAME_KEY, Collections.emptyMap());
-            String url = MapUtils.getString(repo, "git_url");
+            Map<String, Object> repository = MapUtils.getMap(data, REPO_NAME_KEY, Map.of());
+            String url = MapUtils.getString(repository, "git_url");
             return new URI(url).getHost();
         } catch (Exception e) {
             return null;
@@ -170,11 +170,11 @@ public class Payload {
     }
 
     public Map<String, Set<String>> getFiles() {
-        if (!eventName.toLowerCase().equals(PUSH_EVENT)) {
-            return Collections.emptyMap();
+        if (!PUSH_EVENT.equalsIgnoreCase(eventName)) {
+            return Map.of();
         }
 
-        List<Map<String, Object>> commits = MapUtils.getList(data, "commits", Collections.emptyList());
+        List<Map<String, Object>> commits = MapUtils.getList(data, "commits", List.of());
         Map<String, Set<String>> files = new HashMap<>();
         for (Map<String, Object> c : commits) {
             append(c, "added", files);
@@ -184,20 +184,48 @@ public class Payload {
         return files;
     }
 
+    public boolean isPullRequestFromDifferentRepo() {
+        Map<String, Object> pullRequest = getPullRequestAttribute(this.raw());
+        String baseCloneUrl = getPullRequestCloneUrl(pullRequest, BASE_KEY);
+        String headCloneUrl = getPullRequestCloneUrl(pullRequest, HEAD_KEY);
+
+        return !Objects.equals(baseCloneUrl, headCloneUrl);
+    }
+
+    /**
+     * @return <code>true</code> when event contains `pull_request` attribute.<br/>
+     *         NOTE: this does <em>not</em> indicate the payload is from a <code>pull_request</code>
+     *         event. It may be from another event related to a pull request such as
+     *         <code>pull_request_review</code> or <code>pull_request_review_comment</code>
+     */
+    public boolean hasPullRequestEntry() {
+        return raw().containsKey(PULL_REQUEST_EVENT);
+    }
+
+    public String getPullRequestBaseUrl() {
+        Map<String, Object> pullRequest = getPullRequestAttribute(this.raw());
+        return getPullRequestCloneUrl(pullRequest, BASE_KEY);
+    }
+
+    public String getPullRequestHeadUrl() {
+        Map<String, Object> pullRequest = getPullRequestAttribute(this.raw());
+        return getPullRequestCloneUrl(pullRequest, HEAD_KEY);
+    }
+
     private static void append(Map<String, Object> c, String name, Map<String, Set<String>> result) {
-        List<String> value = MapUtils.getList(c, name, Collections.emptyList());
+        List<String> value = MapUtils.getList(c, name, List.of());
         result.compute(name, (k, v) -> (v == null) ? new HashSet<>(value) : Stream.concat(v.stream(), value.stream()).collect(Collectors.toSet()));
     }
 
     public String getSender() {
-        Map<String, Object> sender = MapUtils.getMap(data, "sender", Collections.emptyMap());
+        Map<String, Object> sender = MapUtils.getMap(data, "sender", Map.of());
         return MapUtils.getString(sender, "login");
     }
 
     public String getSenderLdapDn() {
         Object result = ConfigurationUtils.get(data, "sender", "ldap_dn");
-        if (result instanceof String) {
-            return (String) result;
+        if (result instanceof String s) {
+            return s;
         }
         return null;
     }
@@ -215,7 +243,7 @@ public class Payload {
     }
 
     private static String getRef(Map<String, Object> event) {
-        String ref = MapUtils.getString(event, "ref");
+        String ref = MapUtils.getString(event, REF_KEY);
         if (ref == null) {
             return null;
         }
@@ -224,15 +252,25 @@ public class Payload {
     }
 
     private static String getPullRequestHead(Map<String, Object> event) {
-        Map<String, Object> pr = MapUtils.getMap(event, PULL_REQUEST_EVENT, Collections.emptyMap());
-        Map<String, Object> base = MapUtils.getMap(pr, "head", Collections.emptyMap());
-        return MapUtils.getString(base, "ref");
+        Map<String, Object> pr = MapUtils.getMap(event, PULL_REQUEST_EVENT, Map.of());
+        Map<String, Object> base = MapUtils.getMap(pr, HEAD_KEY, Map.of());
+        return MapUtils.getString(base, REF_KEY);
     }
 
     private static String getBranchPullRequest(Map<String, Object> event) {
-        Map<String, Object> pr = MapUtils.getMap(event, PULL_REQUEST_EVENT, Collections.emptyMap());
-        Map<String, Object> base = MapUtils.getMap(pr, "base", Collections.emptyMap());
-        return MapUtils.getString(base, "ref");
+        Map<String, Object> pr = MapUtils.getMap(event, PULL_REQUEST_EVENT, Map.of());
+        Map<String, Object> base = MapUtils.getMap(pr, BASE_KEY, Map.of());
+        return MapUtils.getString(base, REF_KEY);
+    }
+
+    private static Map<String, Object> getPullRequestAttribute(Map<String, Object> event) {
+        return MapUtils.getMap(event, PULL_REQUEST_EVENT, Map.of());
+    }
+
+    private static String getPullRequestCloneUrl(Map<String, Object> pullRequest, String baseOrHead) {
+        Map<String, Object> head = MapUtils.getMap(pullRequest, baseOrHead, Map.of());
+        Map<String, Object> headRepo = MapUtils.getMap(head, "repo", Map.of());
+        return MapUtils.getString(headRepo, "clone_url", "");
     }
 
     @Override
